Chagned icon and content

--- a/css/style.css
+++ b/css/style.css
@@ -1716,8 +1716,8 @@ PORTFOLIO
 .OOTD h2, h3 {
   color: #0096FF
 }
-#Chatter h2, h3 {
-  color: #FF8AD8
+#BashChat h2, h3 {
+  color: rgb(94, 255, 0)
 }
 .AcidRain h2, h3 {
     color: rgb(0, 255, 0);
